crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.20.6__const_constants__assign_to_const.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.assign_to_const] 8:4..8:4: cannot assign to const variable `x`
---
unit (0 diagnostics)
