crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.20.6__const_constants__const_missing_init.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.const_missing_init] 6:12..6:12: const variable must have an initializer
---
unit (0 diagnostics)
